# agenthub

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
docs/: coding-standards.html
src/: App.tsx  configWriter.ts  i18n.tsx  logger.ts  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  ai.rs  anything_llm.rs  cc_switch.rs  commands.rs  config.rs  lib.rs  logging.rs  mem0.rs  qdrant.rs  types.rs
src/components/: AddProjectModal.tsx  AgentSection.tsx  AiSection.tsx  AnythingLLMSection.tsx  CcSwitchImportModal.tsx  ConfirmDialog.tsx  McpSection.tsx  MemoryPage.tsx  MemorySection.tsx  ProjectDetailContent.tsx  ProjectDetailTabs.tsx  ProviderSection.tsx  QdrantSection.tsx  Select.tsx  SettingsPage.tsx  SkillsSection.tsx
src/hooks/: useAppStore.ts
src/lib/: project-config.ts
src/locales/: en.ts  ja.ts  ko.ts  zh-CN.ts  zh-TW.ts
